update cond_branch tests to use avrasm module

--- a/tests/cond_branch.ipynb
+++ b/tests/cond_branch.ipynb
@@ -13,9 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "doc = \"\"\"; Tests the flow control conditional branch instructions.\n",
-    "; These tests assume the BSET and BCLR instructions are functional.\n",
-    "\"\"\""
+    "from avrasm import *"
    ]
   },
   {
@@ -24,14 +22,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def testBranchSet(bit, label, org):\n",
-    "    \"\"\"Tests BRBS instruction for a given bit of the status register\"\"\"\n",
-    "    return f\"\"\"\n",
-    "        BSET {bit};\n",
-    "        BRBS {bit}, {label}; bit set => branch should be taken\n",
-    ".ORG 0x{org:04x};\n",
-    "{label}: BCLR {bit};\n",
-    "        BRBS {bit}, {label}; bit cleared => branch should not be taken\n",
+    "doc = \"\"\"; Tests the flow control conditional branch instructions.\n",
+    "; These tests assume the BSET and BCLR instructions are functional.\n",
     "\"\"\""
    ]
   },
@@ -41,15 +33,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def testBranchClear(bit, label, org):\n",
-    "    \"\"\"Tests BRBC instruction for a given bit of the status register\"\"\"\n",
-    "    return f\"\"\"\n",
-    "        BCLR {bit};\n",
-    "        BRBC {bit}, {label}; bit clear => branch should be taken\n",
-    "        .ORG 0x{org:04x};\n",
-    "{label}: BSET {bit};\n",
-    "        BRBC {bit}, {label}; bit set => branch should not be taken\n",
-    "\"\"\""
+    "def setstatus(bit, isSet=True):\n",
+    "    if isSet:\n",
+    "        return BSET(bit)\n",
+    "    else:\n",
+    "        return BCLR(bit)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ORG(addr):\n",
+    "    return Instruction(\".ORG\", (f\"0x{addr:04X}\",))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def testBranchSet(bit, label, org):\n",
+    "    \"\"\"Tests BRBS instruction for a given bit of the status register\"\"\"\n",
+    "    return [\n",
+    "        BSET(bit),\n",
+    "        BRBS(bit, label)(\"bit set => branch should be taken\"),\n",
+    "        ORG(org),\n",
+    "        BCLR(bit)[label],\n",
+    "        BRBS(bit, label)(\"bit cleared => branch should not be taken\")\n",
+    "    ]"
    ]
   },
   {
@@ -58,25 +73,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "contents = [\n",
-    "    doc,\n",
-    "    \";PREPROCESS TestBRBS\"\n",
-    "]\n",
-    "org = 0x0000\n",
-    "for i in range(8):\n",
-    "    org += 0x0010\n",
-    "    contents += [testBranchSet(i, f\"branchSet{i}\", org)]\n",
-    "    \n",
-    "contents += [\";PREPROCESS TestBRBC\"]\n",
-    "\n",
-    "for i in range(8):\n",
-    "    org += 0x0010\n",
-    "    contents += [testBranchClear(i, f\"branchClear{i}\", org)]\n",
-    "\n",
-    "contents += [f\"\"\"\n",
-    "        NOP;\n",
-    "done:   RJMP done; loop forever\n",
-    "\"\"\"]"
+    "def testBranchClear(bit, label, org):\n",
+    "    \"\"\"Tests BRBC instruction for a given bit of the status register\"\"\"\n",
+    "    return [\n",
+    "        BCLR(bit),\n",
+    "        BRBC(bit, label)(\"bit clear => branch should be taken\"),\n",
+    "        ORG(org),\n",
+    "        BSET(bit)[label],\n",
+    "        BRBC(bit, label)(\"bit set => branch should not be taken\")\n",
+    "    ]"
    ]
   },
   {
@@ -85,8 +90,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "brbsTests = [\";PREPROCESS TestBRBS\"]\n",
+    "org = 0x0000\n",
+    "for i in range(8):\n",
+    "    org += 0x0010\n",
+    "    brbsTests += [testBranchSet(i, f\"branchSet{i}\", org)]\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "brbcTests = [\";PREPROCESS TestBRBC\"]\n",
+    "for i in range(8):\n",
+    "    org += 0x0010\n",
+    "    brbcTests += [testBranchClear(i, f\"branchClear{i}\", org)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "with open(\"flow_cond_branch.asm\", \"w\") as f:\n",
-    "    f.write(\"\\n\".join(contents))"
+    "    f.write(stringify([doc, brbsTests, brbcTests]))"
    ]
   }
  ],
