--- a/tests/flowskip.ipynb
+++ b/tests/flowskip.ipynb
@@ -24,7 +24,13 @@
    "outputs": [],
    "source": [
     "def setreg(reg, val):\n",
-    "    return LDS(r(reg), a(0)).read(val, 0)(f\"set r{reg} to {val}\")\n",
+    "    return [\n",
+    "        PUSH(r(16)),\n",
+    "        LDI(r(16), v(val)),\n",
+    "        STS(a(0), r(16)),\n",
+    "        POP(r(16)),\n",
+    "        LDS(r(reg), a(0)).read(val, 0)(f\"set r{reg} to {val}\")\n",
+    "    ]\n",
     "\n",
     "def checkreg(reg, val):\n",
     "    return STS(a(0), r(reg)).write(val, 0)(f\"r{reg} should be {val}\")\n",
@@ -133,9 +139,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def testSbrS(reg, val, bit, instr):\n",
+    "def testSbrs(reg, val, bit, instr):\n",
     "    skip = (val & (1<<bit))\n",
-    "    mssg = f\"bit {bit} of {val:08b} is {'clear' if skip else 'set'}\"\n",
+    "    mssg = f\"bit {bit} of {val:08b} is {'set' if skip else 'clear'}\"\n",
     "    if skip:\n",
     "        instr.skip()\n",
     "    return [\n",
@@ -155,14 +161,14 @@
     "    \"\\n;PREPROCESS TestSBRS\",\n",
     "    LDI(r(31), v(0x00)),\n",
     "    LDI(r(30), v(0x00)),\n",
-    "    \"; skip a LD (1 word) instruction\",\n",
-    "    testSbrc(choice(range(30)), 0xF0, 4, LD(r(0), 'Z').read(0, 0)),\n",
-    "    \"; don't skip a LD instruction\",\n",
-    "    testSbrc(choice(range(30)), 0x0F, 7, LD(r(0), 'Z').read(0, 0)),\n",
-    "    \"; skip a STS (2 word) instruction\",\n",
-    "    testSbrc(choice(range(32)), 0xF0, 5, checkreg(0,0xff)),\n",
-    "    \"; don't skip a STS instruction\",\n",
-    "    testSbrc(choice(range(32)), 0x0F, 6, checkreg(0,0xff)),\n",
+    "    \"; don't skip a LD (1 word) instruction\",\n",
+    "    testSbrs(choice(range(30)), 0xF0, 4, LD(r(0), 'Z').read(0, 0)),\n",
+    "    \"; skip a LD instruction\",\n",
+    "    testSbrs(choice(range(30)), 0x0F, 7, LD(r(0), 'Z').read(0, 0)),\n",
+    "    \"; don't skip a STS (2 word) instruction\",\n",
+    "    testSbrs(choice(range(32)), 0xF0, 5, checkreg(0,0xff)),\n",
+    "    \"; skip a STS instruction\",\n",
+    "    testSbrs(choice(range(32)), 0x0F, 6, checkreg(0,0xff)),\n",
     "]"
    ]
   },
