add a few comments to data move and flow skip tests

--- a/tests/datamove.ipynb
+++ b/tests/datamove.ipynb
@@ -24,6 +24,8 @@
    "outputs": [],
    "source": [
     "doc = \"\"\"; Tests the data movement instructions\n",
+    "; THIS FILE IS GENERATED\n",
+    "; for explanations or modifications, see notebook datamove.ipynb\n",
     "\n",
     "; Note, we attempt to verify the behavior of the load instructions\n",
     "; by writing registers out with STS-\n",
@@ -56,8 +58,13 @@
    "outputs": [],
    "source": [
     "def testLoadI(values):\n",
-    "    \"\"\"Tests LDI instruction with a list of\n",
-    "    (register, value)\n",
+    "    \"\"\"Tests LDI instruction with a list of (register, value)\n",
+    "    We first load all the values into the specified registers,\n",
+    "    then read them out so we can verify their values.\n",
+    "    \n",
+    "    We do all the loads at once, then all the stores,\n",
+    "    to hopefully catch any case where registers\n",
+    "    change value when they should not.\n",
     "    \"\"\"\n",
     "    loads = [LDI(r(reg), v(value)) for (reg, value) in values]\n",
     "    stores = [checkreg(reg, value) for (reg, value) in values]\n",
@@ -92,6 +99,7 @@
     "def testLoad(values):\n",
     "    \"\"\"Tests LD instruction with list of\n",
     "    (target register, address register, value, address)\n",
+    "    Again, we first load all the registers, then read them out.\n",
     "    \"\"\"\n",
     "    loads = [LD(r(treg), areg).read(value, addr)\n",
     "                 for (treg, areg, value, addr) in values]\n",
@@ -105,9 +113,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# registers that combine into 16 bit registers\n",
     "regs = {\"X\": (26,27), \"Y\": (28,29), \"Z\": (30,31)}\n",
+    "# randomly sample n 8 bit registers,\n",
+    "# excluding any that are used as part of one of the 16 bit registers\n",
     "sampleRegs = lambda n, ex: sample(list(set(range(32)) - set(regs[ex])), n)\n",
+    "\n",
     "def setWord(reg, value):\n",
+    "    \"\"\"Put a 16 bit value into X, Y or Z\"\"\"\n",
     "    low, high = regs[reg]\n",
     "    return [\n",
     "        LDI(r(low), v(value%0x100))(f\"set {reg} to {a(value)}\"),\n",
@@ -154,6 +167,7 @@
     "def testLoadD(values):\n",
     "    \"\"\"Test LDD instruction with Y or Z register\n",
     "    (target register, address register, offset, value, actual address)\n",
+    "    Loads all registers in sequence, then reads them out.\n",
     "    \"\"\"\n",
     "    loads = [LDD(r(treg), f\"{areg}+{off}\").read(value, addr) \n",
     "                 for (treg, areg, off, value, addr) in values]\n",
@@ -167,12 +181,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# randomly pick a single register that is not part of the\n",
+    "# specified 16 bit register\n",
     "randReg = lambda ex: choice(list(set(range(32)) - set(regs[ex])))\n",
     "\n",
     "def testLoadDReg(reg):\n",
     "    \"\"\"Test LDD instruction with Y or Z register\"\"\"\n",
+    "    # instruction supports offsets between 0 and 63.\n",
+    "    # test 0 and 63 themselves, plus some random values in between.\n",
     "    offsets = [0] + [randint(0,63) for _ in range(6)] + [63]\n",
     "    return [\n",
+    "        # set base near FFFF so offset may overflow and wrap.\n",
+    "        # if your program does this on purpose\n",
+    "        # do consider never touching a computer again.\n",
     "        setWord(reg, 0xFFE0),\n",
     "        testLoadD([(randReg(reg), reg, off, randint(0,0xFF), (0xFFE0+off)%0x10000)\n",
     "              for off in offsets])\n",
@@ -201,6 +222,7 @@
     "def testLoadS(values):\n",
     "    \"\"\"Tests LDS instruction with a list of\n",
     "    (register, value, address)\n",
+    "    Again, load all values in sequence, then read them out.\n",
     "    \"\"\"\n",
     "    loads = [LDS(r(reg), a(addr)).read(value, addr) for (reg, value, addr) in values]\n",
     "    stores = [checkreg(reg, value) for (reg, value, checkaddr) in values]\n",
@@ -242,6 +264,10 @@
    "outputs": [],
    "source": [
     "def testMove(regs):\n",
+    "    \"\"\"test the move instruction by loading a random value into one register,\n",
+    "    moving it in sequence through the other registers,\n",
+    "    and reading it out of the last register\n",
+    "    \"\"\"\n",
     "    value = randint(0,0xFF)\n",
     "    movs = [MOV(r(regs[i]), r(regs[i+1])) for i in range(len(regs)-1)]\n",
     "    return [\n",
@@ -281,6 +307,7 @@
    "outputs": [],
    "source": [
     "def setreg(reg, val):\n",
+    "    \"\"\"read a known value into any register\"\"\"\n",
     "    return LDS(r(reg), a(0)).read(val, 0)(f\"set r{reg} to {val}\")"
    ]
   },
@@ -291,7 +318,8 @@
    "outputs": [],
    "source": [
     "def testStore(values):\n",
-    "    \"\"\"\n",
+    "    \"\"\" test store command by loading given values into registers,\n",
+    "    then storing them.\n",
     "    (source register, address register, value, address)\n",
     "    \"\"\"\n",
     "    loads = [setreg(sreg, value) for (sreg, _, value, _) in values]\n",
@@ -307,6 +335,9 @@
    "outputs": [],
    "source": [
     "def testStoreVariants(reg):\n",
+    "    \"\"\"test all variants of store with X, Y or Z-\n",
+    "    plain, pre decrement, post increment\n",
+    "    \"\"\"\n",
     "    return [\n",
     "        setWord(reg, 0x0004),\n",
     "        testStore([(0, reg, 0xEC, 0x0004)]),\n",
@@ -429,9 +460,16 @@
    "outputs": [],
    "source": [
     "def testPushPop(regs):\n",
+    "    \"\"\"test push and pop by loading a bunch of random values\n",
+    "    into all the registers, pushing them, popping them,\n",
+    "    and making sure the values didn't change\n",
+    "    \"\"\"\n",
+    "    # generate random values\n",
     "    values = [randint(0,0xFF) for _ in regs]\n",
+    "    # load and push\n",
     "    loads = [setreg(regs[i], values[i]) for i in range(len(regs))]\n",
     "    pushes = [PUSH(r(regs[i])).write(values[i], (-i)%0x10000) for i in range(len(regs))]\n",
+    "    # pop and check\n",
     "    pops = [POP(r(regs[-i-1])).read(values[-i-1], (-len(regs)+i+1)%0x10000) for i in range(len(regs))]\n",
     "    stores = [checkreg(regs[i], values[i]) for i in range(len(regs))]\n",
     "    return [\n",
@@ -449,7 +487,7 @@
    "outputs": [],
    "source": [
     "pushpopTests = [\n",
-    "    \";PREPROCESS TestPOP\",\n",
+    "    \";PREPROCESS TestPUSH\",\n",
     "    \";PREPROCESS TestPOP\",\n",
     "    testPushPop(sample(range(32),32))\n",
     "]"
