--- a/tests/flowskip.ipynb
+++ b/tests/flowskip.ipynb
@@ -200,8 +200,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "doc = \"\"\"; Tests the flow control skip instructions and NOP\n",
+    "THIS FILE IS GENERATED\n",
+    "for explanations or modifications, see notebook flowskip.ipynb\n",
+    "\"\"\"\n",
     "skipTests = [\n",
-    "    \"; Tests the flow control skip instructions and NOP\\n\",\n",
+    "    doc,\n",
     "    cpseTests,\n",
     "    sbrcTests,\n",
     "    sbrsTests,\n",
