note cond_branch is generated

--- a/tests/cond_branch.ipynb
+++ b/tests/cond_branch.ipynb
@@ -24,6 +24,8 @@
    "source": [
     "doc = \"\"\"; Tests the flow control conditional branch instructions.\n",
     "; These tests assume the BSET and BCLR instructions are functional.\n",
+    "; THIS FILE IS GENERATED\n",
+    "; for explanations or modifications, see notebook cond_branch.ipynb\n",
     "\"\"\""
    ]
   },
