Fix bugs and typos
dau_tests outputed wrong vcd file
lst2test hack to substutite strupr
avrasm don't output '$' in front of read/write vectors
datamove accidentally appended two 'r's in front of registers

--- a/tests/datamove.ipynb
+++ b/tests/datamove.ipynb
@@ -376,7 +376,7 @@
     "    \"\"\"Test STD instruction with Y or Z register\n",
     "    (source register, address register, offset, value, actual address)\n",
     "    \"\"\"\n",
-    "    loads = [setreg(r(sreg), value) for (sreg, _, _, value, _) in values]\n",
+    "    loads = [setreg(sreg, value) for (sreg, _, _, value, _) in values]\n",
     "    stores = [STD(f\"{areg}+{off}\", r(sreg)).write(value, addr)\n",
     "                 for (sreg, areg, off, value, addr) in values]\n",
     "    return loads + stores"
@@ -542,7 +542,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
