Fix MOV instruction tests

--- a/tests/datamove.ipynb
+++ b/tests/datamove.ipynb
@@ -13,8 +13,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from random import randint, sample, choice\n",
-    "from avrasm import *"
+    "from random import randint, sample, choice, seed\n",
+    "from avrasm import *\n",
+    "\n",
+    "r"
    ]
   },
   {
@@ -270,7 +272,7 @@
     "    and reading it out of the last register\n",
     "    \"\"\"\n",
     "    value = randint(0,0xFF)\n",
-    "    movs = [MOV(r(regs[i]), r(regs[i+1])) for i in range(len(regs)-1)]\n",
+    "    movs = [MOV(r(regs[i+1]), r(regs[i])) for i in range(len(regs)-1)]\n",
     "    return [\n",
     "        LDS(r(regs[0]), a(0x0000)).read(value, 0x0000),\n",
     "        movs,\n",
@@ -544,7 +546,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
