Add random seed

--- a/tests/datamove.ipynb
+++ b/tests/datamove.ipynb
@@ -13,10 +13,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import random\n",
     "from random import randint, sample, choice, seed\n",
     "from avrasm import *\n",
     "\n",
-    "r"
+    "random.seed(42)"
    ]
   },
   {
