Replace setreg routine

--- a/tests/flowskip.ipynb
+++ b/tests/flowskip.ipynb
@@ -24,13 +24,8 @@
    "outputs": [],
    "source": [
     "def setreg(reg, val):\n",
-    "    return [\n",
-    "        PUSH(r(16)),\n",
-    "        LDI(r(16), v(val)),\n",
-    "        STS(a(0), r(16)),\n",
-    "        POP(r(16)),\n",
-    "        LDS(r(reg), a(0)).read(val, 0)(f\"set r{reg} to {val}\")\n",
-    "    ]\n",
+    "    \"\"\"read a known value into any register\"\"\"\n",
+    "    return LDS(r(reg), a(0)).read(val, 0)(f\"set r{reg} to {val}\")\n",
     "\n",
     "def checkreg(reg, val):\n",
     "    return STS(a(0), r(reg)).write(val, 0)(f\"r{reg} should be {val}\")\n",
