--- a/tests/flowskip.ipynb
+++ b/tests/flowskip.ipynb
@@ -9,17 +9,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import random\n",
     "from random import sample, choice, randint\n",
-    "from avrasm import *"
+    "from avrasm import *\n",
+    "\n",
+    "random.seed(42)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,28 +73,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
+    "test_val = 0x97\n",
     "cpseTests = [\n",
     "    \"\\n;PREPROCESS TestCPSE\",\n",
     "    LDI(r(31), v(0x00)),\n",
     "    LDI(r(30), v(0x00)),\n",
     "    \"; skip a LD (1 word) instruction\",\n",
-    "    testCpse(sample(range(30), 2), (0, 0), LD(r(0), 'Z').read(0, 0)),\n",
+    "    testCpse(sample(range(1, 30), 2), (0, 0), LD(r(0), 'Z').read(test_val, 0)),\n",
     "    \"; don't skip a LD instruction\",\n",
-    "    testCpse(sample(range(30), 2), (0, randint(0,0xFF)), LD(r(0), 'Z').read(0, 0)),\n",
+    "    testCpse(sample(range(1, 30), 2), (0, randint(0,0xFF)), LD(r(0), 'Z').read(test_val, 0)),\n",
     "    \"; skip a STS (2 word) instruction\",\n",
-    "    testCpse(sample(range(32), 2), (0, 0), checkreg(0,0xff)),\n",
+    "    testCpse(sample(range(1, 32), 2), (0, 0), checkreg(0,test_val)),\n",
     "    \"; don't skip a STS instruction\",\n",
-    "    testCpse(sample(range(32), 2), (randint(0,0xFE), 0xFF), checkreg(0,0xff)),\n",
+    "    testCpse(sample(range(1, 32), 2), (randint(0,0xFE), 0xFF), checkreg(0,test_val)),\n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,28 +113,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
+    "test_val = 0x73\n",
     "sbrcTests = [\n",
     "    \"\\n;PREPROCESS TestSBRC\",\n",
     "    LDI(r(31), v(0x00)),\n",
     "    LDI(r(30), v(0x00)),\n",
     "    \"; skip a LD (1 word) instruction\",\n",
-    "    testSbrc(choice(range(30)), 0xF0, 0, LD(r(0), 'Z').read(0, 0)),\n",
+    "    testSbrc(choice(range(1, 30)), 0xF0, 0, LD(r(0), 'Z').read(test_val, 0)),\n",
     "    \"; don't skip a LD instruction\",\n",
-    "    testSbrc(choice(range(30)), 0x0F, 3, LD(r(0), 'Z').read(0, 0)),\n",
+    "    testSbrc(choice(range(1, 30)), 0x0F, 3, LD(r(0), 'Z').read(test_val, 0)),\n",
     "    \"; skip a STS (2 word) instruction\",\n",
-    "    testSbrc(choice(range(32)), 0xF0, 1, checkreg(0,0xff)),\n",
+    "    testSbrc(choice(range(1, 32)), 0xF0, 1, checkreg(0,test_val)),\n",
     "    \"; don't skip a STS instruction\",\n",
-    "    testSbrc(choice(range(32)), 0x0F, 2, checkreg(0,0xff)),\n",
+    "    testSbrc(choice(range(1, 32)), 0x0F, 2, checkreg(0,test_val)),\n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,35 +146,36 @@
     "        instr.skip()\n",
     "    return [\n",
     "        setreg(reg, val),\n",
-    "        SBRC(r(reg), str(bit)),\n",
+    "        SBRS(r(reg), str(bit)),\n",
     "        instr(mssg)\n",
     "    ]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
+    "test_val = 0x2A\n",
     "sbrsTests = [\n",
     "    \"\\n;PREPROCESS TestSBRS\",\n",
     "    LDI(r(31), v(0x00)),\n",
     "    LDI(r(30), v(0x00)),\n",
     "    \"; don't skip a LD (1 word) instruction\",\n",
-    "    testSbrs(choice(range(30)), 0xF0, 4, LD(r(0), 'Z').read(0, 0)),\n",
+    "    testSbrs(choice(range(1, 30)), 0xF0, 4, LD(r(0), 'Z').read(test_val, 0)),\n",
     "    \"; skip a LD instruction\",\n",
-    "    testSbrs(choice(range(30)), 0x0F, 7, LD(r(0), 'Z').read(0, 0)),\n",
+    "    testSbrs(choice(range(1, 30)), 0x0F, 7, LD(r(0), 'Z').read(test_val, 0)),\n",
     "    \"; don't skip a STS (2 word) instruction\",\n",
-    "    testSbrs(choice(range(32)), 0xF0, 5, checkreg(0,0xff)),\n",
+    "    testSbrs(choice(range(1, 32)), 0xF0, 5, checkreg(0,test_val)),\n",
     "    \"; skip a STS instruction\",\n",
-    "    testSbrs(choice(range(32)), 0x0F, 6, checkreg(0,0xff)),\n",
+    "    testSbrs(choice(range(1, 32)), 0x0F, 6, checkreg(0,test_val)),\n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
