implement brbs/brbc and update asm generator

--- a/tests/cond_branch.ipynb
+++ b/tests/cond_branch.ipynb
@@ -62,7 +62,7 @@
     "    \"\"\"Tests BRBS instruction for a given bit of the status register\"\"\"\n",
     "    return [\n",
     "        BSET(bit),\n",
-    "        BRBS(bit, label)(\"bit set => branch should be taken\"),\n",
+    "        BRBS(bit, label).branch()(\"bit set => branch should be taken\"),\n",
     "        ORG(org),\n",
     "        BCLR(bit)[label],\n",
     "        BRBS(bit, label)(\"bit cleared => branch should not be taken\")\n",
@@ -79,7 +79,7 @@
     "    \"\"\"Tests BRBC instruction for a given bit of the status register\"\"\"\n",
     "    return [\n",
     "        BCLR(bit),\n",
-    "        BRBC(bit, label)(\"bit clear => branch should be taken\"),\n",
+    "        BRBC(bit, label).branch()(\"bit clear => branch should be taken\"),\n",
     "        ORG(org),\n",
     "        BSET(bit)[label],\n",
     "        BRBC(bit, label)(\"bit set => branch should not be taken\")\n",
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +139,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
